--- a/index.html
+++ b/index.html
@@ -86,29 +86,15 @@
             50% { opacity: 0.6; }
         }
 
-        .thumbnail-view .bracket {
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            border: 3px solid #00ffff;
-            box-shadow: 0 0 15px rgba(0, 255, 255, 0.8);
-            z-index: 5;
-        }
-
-        .bracket-tl { top: 8px; left: 8px; border-right: none; border-bottom: none; }
-        .bracket-tr { top: 8px; right: 8px; border-left: none; border-bottom: none; }
-        .bracket-bl { bottom: 8px; left: 8px; border-right: none; border-top: none; }
-        .bracket-br { bottom: 8px; right: 8px; border-left: none; border-top: none; }
-
         .thumbnail-view .content {
             position: relative;
             z-index: 10;
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            padding: 25px;
+            padding: 15px 25px 20px 25px;
             text-align: center;
         }
 
@@ -123,7 +109,7 @@
                 0 0 20px rgba(0, 255, 255, 1),
                 0 0 40px rgba(0, 255, 255, 0.6),
                 0 0 60px rgba(0, 255, 255, 0.4);
-            margin: 0 0 8px 0;
+            margin: 0 0 5px 0;
             line-height: 1;
         }
 
@@ -134,21 +120,21 @@
             color: #66d9ff;
             text-transform: uppercase;
             letter-spacing: 3px;
-            margin: 0 0 20px 0;
+            margin: 0 0 12px 0;
         }
 
         .thumbnail-view .status-bar {
             background: rgba(0, 255, 255, 0.15);
             border: 2px solid #00ffff;
             border-radius: 8px;
-            padding: 10px 20px;
-            margin-bottom: 15px;
+            padding: 8px 16px;
+            margin-bottom: 10px;
             box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
         }
 
         .thumbnail-view .status-text {
             font-family: 'Orbitron', sans-serif;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 700;
             color: #00ff88;
             text-shadow: 0 0 10px rgba(0, 255, 136, 0.8);
@@ -176,14 +162,14 @@
 
         .click-hint {
             position: absolute;
-            bottom: 12px;
+            top: 10px;
             right: 15px;
             font-family: 'Rajdhani', sans-serif;
-            font-size: 12px;
+            font-size: 9px;
             color: #66d9ff;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            opacity: 0.7;
+            letter-spacing: 0.5px;
+            opacity: 0.6;
             z-index: 20;
             animation: blink 2s ease-in-out infinite;
         }
@@ -244,20 +230,6 @@
                 linear-gradient(90deg, rgba(0, 217, 255, 0.03) 1px, transparent 1px);
             background-size: 50px 50px;
         }
-
-        .inventory-view .corner {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            border: 2px solid #00d9ff;
-            box-shadow: 0 0 10px rgba(0, 217, 255, 0.5);
-            z-index: 5;
-        }
-
-        .inventory-view .corner-tl { top: 10px; left: 10px; border-right: none; border-bottom: none; }
-        .inventory-view .corner-tr { top: 10px; right: 10px; border-left: none; border-bottom: none; }
-        .inventory-view .corner-bl { bottom: 10px; left: 10px; border-right: none; border-top: none; }
-        .inventory-view .corner-br { bottom: 10px; right: 10px; border-left: none; border-top: none; }
 
         .inventory-view .content {
             position: relative;
@@ -393,28 +365,28 @@
         /* Back button */
         .back-button {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: 10px;
+            left: 10px;
             z-index: 100;
             background: rgba(0, 217, 255, 0.2);
             border: 2px solid #00d9ff;
             color: #00ffff;
             font-family: 'Orbitron', sans-serif;
-            font-size: 14px;
+            font-size: 11px;
             font-weight: 700;
-            padding: 10px 20px;
+            padding: 6px 12px;
             cursor: pointer;
             text-transform: uppercase;
-            letter-spacing: 2px;
-            border-radius: 4px;
-            box-shadow: 0 0 15px rgba(0, 217, 255, 0.4);
+            letter-spacing: 1px;
+            border-radius: 3px;
+            box-shadow: 0 0 10px rgba(0, 217, 255, 0.4);
             transition: all 0.2s ease;
         }
 
         .back-button:hover {
             background: rgba(0, 217, 255, 0.3);
-            box-shadow: 0 0 25px rgba(0, 217, 255, 0.6);
-            transform: translateX(-3px);
+            box-shadow: 0 0 20px rgba(0, 217, 255, 0.6);
+            transform: translateX(-2px);
         }
 
         /* Show/hide logic */
@@ -433,10 +405,6 @@
         <div class="thumbnail-view" onclick="expandInventory()">
             <div class="stars"></div>
             <div class="glow"></div>
-            <div class="bracket bracket-tl"></div>
-            <div class="bracket bracket-tr"></div>
-            <div class="bracket bracket-bl"></div>
-            <div class="bracket bracket-br"></div>
 
             <div class="content">
                 <h1 class="company-name">INFINITE<br>SOLUTIONS</h1>
@@ -467,11 +435,6 @@
             <div class="stars"></div>
             <div class="nebula"></div>
             <div class="grid"></div>
-
-            <div class="corner corner-tl"></div>
-            <div class="corner corner-tr"></div>
-            <div class="corner corner-bl"></div>
-            <div class="corner corner-br"></div>
 
             <div class="content">
                 <div class="header">
