Fix calculator font sizes and input alignment
- Calculate button: 11px -> 16px (more readable)
- Input box font: 11px -> 18px (much larger, easier to read)
- Input box width: calc(100% - 36px) -> 100% (proper alignment)
- Quality/price values: 13px -> 18px (consistent sizing)

All fonts now properly sized and inputs align with other modal elements.

--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
             border-radius: 6px;
             font-weight: 700;
             cursor: pointer;
-            font-size: 11px;
+            font-size: 16px;
             font-family: 'Rajdhani', sans-serif;
             transition: all 0.2s;
             text-transform: uppercase;
@@ -948,7 +948,7 @@
         .calc-value {
             color: #ffffff;
             font-weight: 700;
-            font-size: 13px;
+            font-size: 18px;
         }
 
         .calc-inputs {
@@ -968,13 +968,13 @@
         }
 
         .calc-input-group input {
-            width: calc(100% - 36px);
+            width: 100%;
             padding: 16px;
             background: rgba(0, 100, 150, 0.2);
             border: 2px solid rgba(0, 217, 255, 0.3);
             border-radius: 6px;
             color: #ffffff;
-            font-size: 11px;
+            font-size: 18px;
             font-weight: 600;
             transition: border-color 0.2s;
             box-sizing: border-box;
